--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,10 @@
 
 	<!-- RSS -->
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
+  
+  	<!-- Favicons
+  	================================================== -->
+  
+  	<link rel="shortcut icon" href="images/favicon.ico">
 
 </head>
