--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,6 @@
   	<!-- Favicons
   	================================================== -->
   
-  	<link rel="shortcut icon" href="images/favicon.ico">
+  	<link rel="shortcut icon" href="/img/emerald.svg">
 
 </head>
